# Python-gRPC

./: pyproject.toml
gRPC-tutorial/: client.py  greeter.proto  greeter_pb2_grpc.py  server.py
grpc-auth-project/: client_test.py  docker-compose.yml
grpc-auth-project/auth-service/: Dockerfile  db.py  requirements.txt  server.py  utils.py
grpc-auth-project/profile-service/: Dockerfile  auth_client.py  requirements.txt  server.py
grpc-auth-project/protos/: auth.proto
